--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p class="lead">Eu sou Kaic_</p>
+        <h1>Eu estudo Programação</h1>
+        <p>Estou aprendendo programação pelo alura e estou achando muito bomm!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -36,10 +34,7 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <p class="card-text">este é um projeto que aprendi no alura, e espero que esteja de acordo com tudo.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -114,7 +109,7 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
+                    <a href="">Ver projeto ao vivo</a>
                     <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
                 </div>
             </div>
@@ -159,9 +154,9 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                    <a href="">Ver projeto ao
                         vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    <a href="">Ver código do
                         projeto</a>
                 </div>
             </div>
@@ -199,7 +194,7 @@
                     <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href="">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
@@ -208,7 +203,7 @@
         <h2>Entre em contato</h2>
         <div>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/femascheti">GitHub</a>
+            <a href="">GitHub</a>
         </div>
         <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
     </footer>
